--- a/infra/addons/frontend/templates/service.yaml
+++ b/infra/addons/frontend/templates/service.yaml
@@ -13,7 +13,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort | default .Values.service.port }}
+      targetPort: http
       protocol: TCP
       name: http
   selector:
