Update Ingress and secret BE

--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: backend-secrets
-  namespace: dev
+  namespace: {{.Values.namespace}}
 type: Opaque
 data:
   uri: bW9uZ29kYitzcnY6Ly9rYXBpbDAwMTpVc3BHUzdkQWU4bHhiRVZRQGNsdXN0ZXIwLmx6ZnA1bXUubW9uZ29kYi5uZXQvZS1jb21tZXJjZQo=
