update dev host name

--- a/infra/config/dev/app/ingress/values.yaml
+++ b/infra/config/dev/app/ingress/values.yaml
@@ -1,7 +1,7 @@
 # Dev ingress - development overrides only
 
 namespace: dev
-domain: "www.sharkapp.local"
+domain: "dev.sharkapp.local"
 
 # TLS disabled for local dev
 tls:
