update service monitor release value

--- a/infra/addons/backend/templates/servicemonitor.yaml
+++ b/infra/addons/backend/templates/servicemonitor.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
-    release: prometheus-stack-dev
+    release: {{ (printf "prometheus-stack-%s" .Values.namespace) }}
 spec:
   selector:
     matchLabels:
