fix prmoethous for node expoerter

--- a/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
@@ -83,7 +83,8 @@ prometheus:
       runAsNonRoot: true
       runAsUser: 1000
       fsGroup: 2000
-
+prometheus-node-exporter:
+    enabled: false
 # Alerting configuration for production
 alertmanager:
   enabled: true  # Enable alerting in production
