--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -1,58 +1,57 @@
 namespace: dev
 
-# Grafana configuration for DEV environment
-grafana:
-  adminPassword: "devadmin123"
-  
-  grafana.ini:
-    server:
-      domain: "dev.grafana.local"
-      root_url: "http://dev.grafana.local:8000/"
-      serve_from_sub_path: false
-    auth.anonymous:
-      enabled: false
-  
-  ingress:
-    enabled: true  # Enable ingress for external access
-    ingressClassName: nginx  # Use nginx ingress controller
-    annotations:
-      nginx.ingress.kubernetes.io/ssl-redirect: "false"  # No HTTPS redirect in dev
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    hosts:
-      - host: dev.grafana.local
-        paths:
-          - path: /
-            pathType: Prefix
-    tls: []
-  
-  # Fixed Prometheus service URL
-  additionalDataSources:
-    - name: Prometheus
-      type: prometheus
-      url: http://prometheus-stack-dev-prometheus:9090
-      access: proxy
-      isDefault: true
+# Configuration for kube-prometheus-stack subchart
+kube-prometheus-stack:
+  # Grafana configuration for DEV environment
+  grafana:
+    adminPassword: "devadmin123"
+    
+    grafana.ini:
+      server:
+        domain: "dev.grafana.local"
+        root_url: "http://dev.grafana.local:8000/"
+        serve_from_sub_path: false
+      auth.anonymous:
+        enabled: false
+    
+    ingress:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+      hosts:
+        - dev.grafana.local
+      paths:
+        - /
+      pathType: Prefix
+    
+    additionalDataSources:
+      - name: Prometheus
+        type: prometheus
+        url: http://prometheus-stack-dev-kube-prom-prometheus:9090
+        access: proxy
+        isDefault: true
 
-# Prometheus dev settings
-prometheus:
-  prometheusSpec:
-    # Service monitor selector - which services to monitor
-    serviceMonitorSelector:
-      matchLabels:
-        release: prometheus-stack-dev
-    resources:
-      requests:
-        cpu: "100m"
-        memory: "512Mi"
-      limits:
-        cpu: "500m"
-        memory: "1Gi"
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          resources:
-            requests:
-              storage: 5Gi
+  # Prometheus dev settings
+  prometheus:
+    prometheusSpec:
+      serviceMonitorSelector:
+        matchLabels:
+          release: prometheus-stack-dev
+      resources:
+        requests:
+          cpu: "100m"
+          memory: "512Mi"
+        limits:
+          cpu: "500m"
+          memory: "1Gi"
+      storageSpec:
+        volumeClaimTemplate:
+          spec:
+            resources:
+              requests:
+                storage: 5Gi
 
 # Fix node-exporter for dev
 prometheus-node-exporter:
