--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -14,17 +14,17 @@ kube-prometheus-stack:
       auth.anonymous:
         enabled: false
     
-    # Correct ingress structure for kube-prometheus-stack
+    # Fixed ingress structure
     ingress:
       enabled: true
       ingressClassName: nginx
       annotations:
         nginx.ingress.kubernetes.io/ssl-redirect: "false"
         nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
       hosts:
         - "dev.grafana.local"
       path: /
-      pathType: Prefix
     
     additionalDataSources:
       - name: Prometheus
@@ -53,7 +53,7 @@ kube-prometheus-stack:
               requests:
                 storage: 5Gi
 
-  # Enable node-exporter in dev
+  # Keep node-exporter enabled in dev (disable in prod)
   prometheus-node-exporter:
     enabled: true
 
