--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -1,24 +1,22 @@
-{{- if .Values.grafana.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ include "prometheus-stack.fullname" . }}-grafana
   namespace: {{ .Values.namespace | default .Release.Namespace }}
   annotations:
-    {{- range $key, $value := .Values.grafana.ingress.annotations }}
-    {{ $key }}: {{ $value | quote }}
-    {{- end }}
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
-  ingressClassName: {{ .Values.grafana.ingress.ingressClassName }}
+  ingressClassName: nginx
   rules:
-  - host: {{ .Values.grafana.ingress.host }}
+  - host: {{ .Values.grafana.ingress.host | default "localhost" }}
     http:
       paths:
-      - path: {{ .Values.grafana.ingress.path | default "/" }}
-        pathType: {{ .Values.grafana.ingress.pathType | default "Prefix" }}
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: {{ include "prometheus-stack.fullname" . }}-grafana
             port:
               number: 80
-{{- end }}
