update grafana ingress for dev

--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: {{ .Values.grafana.ingress.host | default "localhost" }}
+  - host: {{ .Values.grafanaHost | default "localhost" }}
     http:
       paths:
       - path: /
