--- a/infra/config/application.yaml
+++ b/infra/config/application.yaml
@@ -58,6 +58,7 @@ spec:
         syncOptions:
           - CreateNamespace=true
           - RespectIgnoreDifferences=true
+          - ServerSideApply=true
         retry:
           limit: 5
           backoff:
